# mytinyrenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: geometry.h  global.h  model.h  mygl.h
output/: funny_output.tga  sbuffer.tga  zbuffer.tga
src/: CMakeLists.txt  geometry.cpp  model.cpp  mygl.cpp
